# gift-intake

./: .gitignore  README.md  charity.docx  compose.yml
GiftIntake add-in/: manifest.json
GiftIntake add-in/src/taskpane/: taskpane.ts
GiftIntake add-in/src/taskpane/components/: App.tsx  TextDisplay.tsx
GiftIntake-add-in/: package-lock.json  package.json  webpack.config.js
GiftIntake-add-in/src/taskpane/: index.tsx  taskpane.html
backend/: build.gradle.kts  index.html  settings.gradle.kts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DisplayResults.tsx  FileUpload.tsx
gift-intake/: Inference.bru  bruno.json
machine-learning/: Dockerfile  pyproject.toml
machine-learning/machine_learning/: __init__.py  config.py  gliner_model.py  main.py  schema.json
machine-learning/machine_learning/api/endpoints/: display.py  extraction.py  health.py
machine-learning/machine_learning/models/: gliner_model.py  model.py  model_results.py
machine-learning/machine_learning/schemas/: InferenceRequest.py  InferenceResponse.py  inference_request.py  inference_response.py
machine-learning/machine_learning/service/: ner_service.py  summary_service.py
machine-learning/machine_learning/uploaded_docs/: Hello.docx
machine-learning/machine_learning/utils/: docx_extractor.py  image_extractor.py  outlook_extractor.py  pdf_extractor.py
notebooks/: README.md  pyproject.toml
outlook-add-in/: manifest.xml  openapi.json  package.json  tsconfig.json
outlook-add-in/src/taskpane/: index.tsx
(+28 files in other folders)
