[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Bruce  <97542494+BruceNiemi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
gliner = "^0.2.15"
ollama = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
