[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Bruce  <97542494+BruceNiemi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
